--- a/BasicFlaskTemplate/Dockerfile
+++ b/BasicFlaskTemplate/Dockerfile
@@ -3,6 +3,8 @@
 
 FROM python:slim-buster
 
+EXPOSE 80/tcp
+
 RUN apt-get update && apt-get install -y && pip install --upgrade pip && apt-get install libgl1 -y && apt-get install libglib2.0-0 -y
 
 WORKDIR ./BasicFlaskTemplate
